# OperatingSysHomework

./: .gitignore  CMakeLists.txt  LICENSE  QT_Test.qrc  QT_Test_zh_CN.qm  QT_Test_zh_CN.ts  README.md  README_en_US.md  Readme_en_US.md  Readme_zh_CN.md
qml/: About.qml  FileEditor.qml  License.qml  LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  main.qml
qml/Component/: AboutStaffItem.qml  InputDialog.qml  ModTabView.qml  NamedUrlItem.qml  ScrollableItems.qml  qmldir
qml/NavItems/: FootItems.qml  OriginalItems.qml  qmldir
qml/Pages/: About.qml  BankAlgorithm.qml  BankAlgorithm_PMalloced.qml  BankAlgorithm_PNeed.qml  BankAlgorithm_SysStatus.qml  DiskSchedule.qml  DynamicPartitions.qml  PageSwapping.qml  ProcessSchedule.qml  Settings.qml
sources/: AppInfo.h  QtIncludes.h  Version.h  main.cpp  singleton.h
sources/C_component/: CMakeLists.txt  setmem.c  setmem.h  types.h
sources/C_component/bootmem/: CMakeLists.txt  bootmem.c  bootmem.h  test.c
sources/C_component/list/: CList.c  CList.h  CMakeLists.txt  test.c
sources/C_component/rbtree/: CMakeLists.txt  CRbtree.c  CRbtree.h  test.c
sources/FS/: CMakeLists.txt  DMS.cpp  DMS.h  New_FS_Types.cpp  New_FS_Types.h  test.cpp
sources/UIComponent/: KaTextArea.cpp  KaTextArea.h
sources/bankalgorithm/: BankAlgorithm.cpp  BankAlgorithm.h
sources/diskschedule/: DiskSchedule.cpp  DiskSchedule.h
sources/dynamicpartition/: DynamicPartition.cpp  DynamicPartition.h
sources/helper/: SettingsHelper.h
sources/pageswapping/: PageSwapping.cpp  PageSwapping.h
sources/processschedule/: ProcessSchedule.cpp  ProcessSchedule.h
src/js/: tools.js
